--- a/components/ui/customscheme.ui
+++ b/components/ui/customscheme.ui
@@ -14,14 +14,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout" >
    <item>
-    <widget class="QListWidget" name="m_formatsListView" >
-     <property name="maximumSize" >
-      <size>
-       <width>150</width>
-       <height>16777215</height>
-      </size>
-     </property>
-    </widget>
+    <widget class="QListWidget" name="m_formatsListView" />
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout" >
