--- a/components/ui/customscheme.ui
+++ b/components/ui/customscheme.ui
@@ -19,7 +19,7 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout" >
      <item>
-      <widget class="QGroupBox" name="groupBox" >
+      <widget class="QGroupBox" name="m_formatGroupBox" >
        <property name="title" >
         <string>&amp;Format</string>
        </property>
@@ -73,7 +73,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QGroupBox" name="groupBox_2" >
+      <widget class="QGroupBox" name="m_colorGroupBox" >
        <property name="title" >
         <string>&amp;Color</string>
        </property>
